<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scheduler</string>
    <string name="saveButton">Зберегти</string>
    <string name="exitButton">Вихід</string>
    <string name="nameEditText">Назва</string>
    <string name="generateTask">Згенерувати завдання</string>
    <string name="commentEditText">Коментар</string>
    <string name="emptyList">Список завдань пустий</string>
    <string name="mainToolbarTitle">Поточні завдання</string>
    <string name="addScheduleToolbarTitleAddTask">Додати завдання</string>
    <string name="addScheduleToolbarTitleEditTask">Редагувати завдання</string>
    <string name="settingsToolbarTitle">Налаштування</string>

    <string name="exit">Вийти</string>
    <string name="action_clear">Очистити</string>
    <string name="action_sort">Сортувати</string>
    <string name="action_settings">Налаштування</string>
    <string name="action_generate">Згенерувати завдання</string>

    <string name="sort_a_z">A-Z</string>
    <string name="sort_z_a">Z-A</string>
    <string name="sort_date_up">Date up</string>
    <string name="sort_date_down">Date down</string>
    <string name="clearAlertDialogTitle">Чи Ви дійсно бажаєте знищити всі завдання?</string>
    <string name="yes">ТАК</string>
    <string name="no">НІ</string>
    <string name="toastMessageIfBackPressed">Натисніть ще раз аби вийти з додатку</string>
    <string name="backgroundForNotStartedTask">Фон не розпочатого завдання</string>
    <string name="backgroundForStartedTask">Фон розпочатого завдання</string>
    <string name="backgroundForNotCompletedTask">Фон завершеного завдання</string>
    <string name="resetColors">Відновити стандартні кольори</string>
    <string name="errTitle2">Назва завдання повинна містити не менше 5 символів</string>
    <string name="edit">Edit</string>
    <string name="reset_task">Reset task</string>
    <string name="restore_complete">Restore complete task</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="max_time_for_task">Максимальний час виконання завдання</string>
    <string name="time_for_task">Час на виконання</string>
    <string name="error_edit_txt_for_maxRuntime">Будь ласка, вкажіть максимальний час виконання</string>
    <string name="notificationContentText">Завдання %s автоматично завершилось</string>
    <string name="typeOfTaskCheckBoxText">Періодичне завдання</string>
    <string name="chooseFromGallery">Обрати з галареї</string>
    <string name="chooseFromCamera">Загрузити з камери</string>
    <string name="cancel">Відмінити</string>
    <string name="actionRefresh">Перерахувати статистику</string>
    <string name="google_app_id">23423452163</string>

    <string-array name="spinner_items">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Date up</item>
        <item>Date down</item>
    </string-array>
    <string-array name="names_of_months">
        <item>Січень</item>
        <item>Лютий</item>
        <item>Березень</item>
        <item>Квітень</item>
        <item>Травень</item>
        <item>Червень</item>
        <item>Липень</item>
        <item>Серпень</item>
        <item>Вересень</item>
        <item>Жовтень</item>
        <item>Листопад</item>
        <item>Грудень</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="mapsToolbarTitle">Прив\'язка до місця</string>
    <string name="mapPlaceCheckBoxText">Прив\'язка до місця</string>
    <string name="action_show_tutorial">Показати підказки</string>
    <string name="understand">Зрозуміло</string>
    <string name="title_for_target_1">Додавання завдання</string>
    <string name="title_for_target_2_4">Зсувне меню</string>
    <string name="title_for_target_3">Сортування</string>
    <string name="title_for_target_5">Статистика</string>
    <string name="text_for_target_0">Рухайтесь по вкладках \"Завдання\" та \"Статистика\" щоби переглядати усі завдання і статистику по місяцях для періодичних завдань</string>
    <string name="text_for_target_1">Нажміть для створення нового завдання</string>
    <string name="text_for_target_2">Зсувайте завдання вправо для його видалення</string>
    <string name="text_for_target_4">Використовуйте ліве зсувне меню, щоби відновити закінчене завдання, або перейти до його редагування</string>
    <string name="text_for_target_3">Нажміть для вибору режиму сортування завдань</string>
    <string name="text_for_target_5">Нажміть для перерахування статистики(вкладка Статистика)</string>
    <string name="test">Тест</string>
    <string name="restore_completed">Відновлення пройшло успішно</string>
    <string name="restore_photo_failed">Не вдалося відновити аватарки</string>
    <string name="restore_failed">Не вдалося відновити</string>
    <string name="backup_to_GD">Backup to GDrive</string>
    <string name="restore_from_GD">Restore from GDrive</string>
    <string name="import_from_GC">Import from GCalendar</string>
    <string name="update_task_success">Завдання %s успішно оновлено</string>
    <string name="export_task_success">Завдання %s успішно додано до GoogleCalendar</string>
    <string name="import_task_progress_massage">Завантаження завдань з GoogleCalendar...</string>
    <string name="no_title">Без назви</string>
    <string name="no_task_find">Завдань не знайдено</string>
    <string name="no_internet_connection">Немає доступу до Інтернету.</string>
    <string name="sc_card_not_writable">sdCard доступна тільки для читання</string>
    <string name="undefined_account">Акаунт не визначено</string>
    <string name="tab1_indicator">Завдання</string>
    <string name="tab2_indicator">Статистика</string>
    <string name="export_to_gСalendar">Export to GCalendar</string>
    <string name="update_task_in_gСalendar">Update in GCalendar</string>
    <string name="gCalendar_success_import">Імпортовано %d завдань</string>
    <string name="request_rejected">Запит відхилено</string>
</resources>