<?xml version="1.0" encoding="utf-8" ?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    swipe:leftEdgeSwipeOffset="0dp"
    swipe:rightEdgeSwipeOffset="0dp">

    <LinearLayout
        android:id="@+id/right_swipe_menu"
        android:layout_width="@dimen/right_swipe_layout_width"
        android:layout_height="match_parent"
        android:weightSum="3">

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/right_swipe_background1"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/right_swipe_txt_color" />

        <TextView
            android:id="@+id/tvResetStart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/right_swipe_background2"
            android:gravity="center"
            android:text="@string/reset_task"
            android:textColor="@color/right_swipe_txt_color" />

        <TextView
            android:id="@+id/tvResetEnd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/right_swipe_background1"
            android:gravity="center"
            android:text="@string/restore_complete"
            android:textColor="@color/right_swipe_txt_color" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/left_swipe_menu"
        android:layout_width="@dimen/left_swipe_layout_width"
        android:layout_height="match_parent"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:src="@drawable/ic_delete_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/taskBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="@dimen/list_icon_size"
                android:layout_height="@dimen/list_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/avatarMargin">

                <ImageView
                    android:id="@+id/listAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/listAvatarMapPin"
                    android:layout_width="@dimen/map_pin_in_avatar_size"
                    android:layout_height="@dimen/map_pin_in_avatar_size"
                    android:layout_gravity="right|end"
                    android:layout_marginTop="@dimen/map_pin_top_margin" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ifRepeatImageView"
                        android:layout_width="@dimen/repeatImageViewSize"
                        android:layout_height="@dimen/repeatImageViewSize"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/repeat_icon_right_margin" />

                    <TextView
                        android:id="@+id/txtListTitle"
                        style="@style/listTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtListComment"
                    style="@style/listCommentStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnPause"
                    style="@style/listBtnStyle"
                    android:background="@drawable/btn_pause_selector"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/btnResume"
                    style="@style/listBtnStyle"
                    android:background="@drawable/btn_resume_selector"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnStart"
                    style="@style/listBtnStyle"
                    android:background="@drawable/btn_start_selector"
                    android:text="@string/start" />

                <Button
                    android:id="@+id/btnFinish"
                    style="@style/listBtnStyle"
                    android:background="@drawable/btn_finish_selector"
                    android:text="@string/finish"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txtListDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/listDate_txtSize"
            android:textStyle="bold" />
    </LinearLayout>
</com.daimajia.swipe.SwipeLayout>