<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarForSettingsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSettings1"
                    android:layout_width="@dimen/settingsActivityTxtWidth"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/settingsActivityTxtLeftPadding"
                    android:text="@string/backgroundForNotStartedTask"
                    android:textSize="@dimen/settingsActivityTxtSize" />

                <Button
                    android:id="@+id/btnNotStartedTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settingsActivityBtnMargin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSettings2"
                    android:layout_width="@dimen/settingsActivityTxtWidth"
                    android:layout_height="wrap_content"

                    android:paddingLeft="@dimen/settingsActivityTxtLeftPadding"
                    android:text="@string/backgroundForStartedTask"
                    android:textSize="@dimen/settingsActivityTxtSize" />

                <Button
                    android:id="@+id/btnStartedTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settingsActivityBtnMargin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSettings3"
                    android:layout_width="@dimen/settingsActivityTxtWidth"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/settingsActivityTxtLeftPadding"
                    android:text="@string/backgroundForNotCompletedTask"
                    android:textSize="@dimen/settingsActivityTxtSize" />

                <Button
                    android:id="@+id/btnCompletedTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settingsActivityBtnMargin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop_for_layout_with_maxRuntime"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSettings4"
                    android:layout_width="@dimen/settingsActivityTxtWidth"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/settingsActivityTxtLeftPadding"
                    android:text="@string/max_time_for_task"
                    android:textSize="@dimen/settingsActivityTxtSize" />

                <EditText
                    android:id="@+id/editTxtMaxRuntime"
                    android:layout_width="@dimen/maxRuntimeEditTxt_width"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settingsActivityBtnMargin"
                    android:inputType="number"
                    android:maxLength="3" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="15dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="@dimen/settingsActivityTxtWidth"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/settingsActivityTxtLeftPadding"
                android:text="Настройки DropBox"
                android:textSize="18sp" />

            <Button
                android:id="@+id/DRBRestore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settingsActivityTxtLeftPadding"
                android:text="Відновити дані" />

            <Button
                android:id="@+id/DRBBackup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settingsActivityTxtLeftPadding"
                android:text="створти резервну копію даних" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>